<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.95"
    android:background="@drawable/bg_profile_activity">

    <!-- Fixed Title -->
    <TextView
        android:id="@+id/title_update_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:gravity="center"
        android:letterSpacing="0.175"
        android:padding="16dp"
        android:text="@string/update_your_profile"
        android:textColor="@color/green"
        android:textSize="27sp"
        android:textStyle="bold" />

    <!-- Scrollable Content -->
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_update_details"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- User Details Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/userDetails"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="21sp"
                android:textStyle="bold" />

            <!-- First Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/firstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Last Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/lastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Phone Number -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/phoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Shop Details Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/shopDetails"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="21sp"
                android:textStyle="bold" />

            <!-- Shop Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/shopName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_shop_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Shop Address -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/shopAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_shop_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Location Details Section Inside Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.9"
                app:cardBackgroundColor="#CCFFFFFF"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"> <!-- Translucent White Background -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Location Details Title -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/locationDetails"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                    <!-- State -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingEnd="8dp"
                            android:text="@string/tvState"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/current_state"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/stateDetail"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <!-- District -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingEnd="8dp"
                            android:text="@string/tvDistrict"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/current_district"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/districtDetail"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <!-- Taluka -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingEnd="8dp"
                            android:text="@string/tvTaluka"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/current_taluka"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/talukaDetail"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Save Button -->
            <Button
                android:id="@+id/button_save"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/green"
                android:padding="12dp"
                android:text="@string/save"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
